# smart-fridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.supervisor  LICENSE  README.md  compose.yaml
db/migrations/: 1_food.sql  1_food_base.sql  2_add_expiry.sql  2_add_food.sql
src/: lib.rs  main.rs
src/db/: mod.rs
src/http/: error.rs  food.rs  handler.rs  mod.rs  template.rs
templates/: fridge.html
