[package]
name = "smart-fridge"
version = "2.0.0"
description = "A tiny service to manage food in your fridge"
authors = ["Valentin Colin <valentin.colin78@gmail.com>"]
repository = "https://github.com/ValentinColin/smart-fridge"
documentation = "https://docs.rs/smart-fridge"
edition = "2021"
license = "MIT"

[dependencies]
# Primary crates
axum = { version = "0.6.20", features = ["macros"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "time"] }
tokio = { version = "1.30.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json", "blocking"] }
clap = { version = "4.4.6", features = ["derive"] }

# Secondary crates
serde = "1.0.183"  # Serialization/Deserialization
serde_with = "3.2.0"  # Serialization/Deserialization
chrono = { version = "0.4.26", features = ["serde"] }  # Time crate
time = { version = "0.3.25", features = ["parsing"] }  # Time crate
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Auxilliary crates
log = "0.4.19"  # Main log crate (trace!(), debug!(), ..., error!())
env_logger = "0.10.0"  # Dynamic log by env var
dotenvy = "0.15.7"  # Load env var from file (default: .env)
anyhow = "1.0.72"  # Error management
thiserror = "1.0.44"  # Error management
impl_new = "0.2.1"  # Auto generate Struct::new()

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }  # HTTP implementation
tower = "0.4.13"  # easy networking client/server
